--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <fieldset>
           <legend>Newsletter:</legend>
           <input class="btmspace-15" type="text" value="" placeholder="Enter Your Email Here&hellip;">
-          <button type="submit" value="submit">Submit</button>
+          <button class="btn" type="submit" value="submit">Submit</button>
         </fieldset>
       </form>
     </section>
