--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <div class="bgded overlay light" style="background-image:url('images/demo/backgrounds/conciergerie1.jpg');">
     <div class="wrapper row0">
       <div id="topbar" class="hoc clear">
+        <a href="#" id="menu_mobile">
+      <i class="fa fa-bars" aria-hidden="true"></i>
+     </a>
         <ul class="nospace">
           <li><a href="index.html"><i class="fa fa-lg fa-home"></i></a></li>
           <li><a href="#" title="Call Us"><i class="fa fa-phone"></i></a></li>
@@ -29,31 +32,30 @@
         <nav id="mainav" class="fl_right">
           <ul class="clear">
             <li class="active"><a href="index.html">Home</a></li>
-            <li><a class="drop" href="#">Pages
-            <ul>
-              </a>
-              <li><a href="pages/gallery.html">Gallery</a></li>
-              <li><a href="pages/full-width.html">Full Width</a></li>
-              <li><a href="pages/sidebar-left.html">Sidebar Left</a></li>
-              <li><a href="pages/sidebar-right.html">Sidebar Right</a></li>
-              <li><a href="pages/basic-grid.html">Basic Grid</a></li>
-          </ul>
-          </li>
-          <li><a class="drop" href="#">Dropdown</a>
-            <ul>
-              <li><a href="#">Level 2</a></li>
-              <li><a class="drop" href="#">Level 2 + Drop</a>
-                <ul>
-                  <li><a href="#">Level 3</a></li>
-                  <li><a href="#">Level 3</a></li>
-                  <li><a href="#">Level 3</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Level 2</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Link Text</a></li>
-          <li><a href="#">Link Text</a></li>
+            <li><a class="drop" href="#">Pages</a>
+              <ul>
+                <li><a href="pages/gallery.html">Gallery</a></li>
+                <li><a href="pages/full-width.html">Full Width</a></li>
+                <li><a href="pages/sidebar-left.html">Sidebar Left</a></li>
+                <li><a href="pages/sidebar-right.html">Sidebar Right</a></li>
+                <li><a href="pages/basic-grid.html">Basic Grid</a></li>
+              </ul>
+            </li>
+            <li><a class="drop" href="#">Dropdown</a>
+              <ul>
+                <li><a href="#">Level 2</a></li>
+                <li><a class="drop" href="#">Level 2 + Drop</a>
+                  <ul>
+                    <li><a href="#">Level 3</a></li>
+                    <li><a href="#">Level 3</a></li>
+                    <li><a href="#">Level 3</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Level 2</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Link Text</a></li>
+            <li><a href="#">Link Text</a></li>
           </ul>
         </nav>
       </header>
@@ -336,7 +338,7 @@
   </div>
   <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
   <!-- scripts -->
-  <script src="scripts/js/main.js" type="text/javascript"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
