--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
       </div>
     </div>
-    <div class="wrapper row1">
+    <div class="wrapper row1" id="headerRow">
       <header id="header" class="hoc clear">
         <div id="logo" class="fl_left">
           <h1><a href="index.html">David, 666th Lucifer street</a></h1>
