--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body id="top">
-  <div class="bgded overlay light" style="background-image:url('images/demo/backgrounds/conciergerie1.jpg');">
+  <div class="bg01 bgded overlay light">
     <div class="wrapper row0">
       <div id="topbar" class="hoc clear">
         <a href="#" id="menu_mobile">
@@ -93,8 +93,8 @@
       <div class="clear"></div>
     </main>
   </div>
-  <div class="wrapper row2 bgded overlay" style="background-image:url('images/demo/backgrounds/conciergerie1.jpg');">
-    <section class="hoc container clear">
+<div class="bg02 wrapper row2 bgded overlay">
+      <section class="hoc container clear">
       <div class="sectiontitle">
         <h6 class="heading">Rhoncus turpis fusce</h6>
         <p>Est venenatis nec rutrum a in velit curabitur vestibulum tellus</p>
@@ -150,8 +150,8 @@
       </ul>
     </figure>
   </div>
-  <div class="wrapper row2 bgded overlay" style="background-image:url('images/demo/backgrounds/conciergerie1.jp');">
-    <section class="hoc container clear">
+<div class="bg03 wrapper row2 bgded overlay">
+      <section class="hoc container clear">
       <div class="sectiontitle">
         <h6 class="heading">Sociis natoque penatibus et</h6>
         <p>Magnis dis parturient montes nascetur ridiculus mus sed in dui</p>
@@ -264,8 +264,8 @@
       <footer class="center"><a class="btn" href="#">Rhoncus mi congue &raquo;</a></footer>
     </section>
   </div>
-  <div class="wrapper row2 bgded overlay" style="background-image:url('images/demo/backgrounds/conciergerie1.jpg');">
-    <section class="hoc cta clear">
+<div class="bg04 wrapper row2 bgded overlay">
+      <section class="hoc cta clear">
       <div class="sectiontitle">
         <h6 class="heading">Nunc malesuada lorem</h6>
         <p>Dictum risus tellus cursus ipsum vel facilisis lorem est fermentum</p>
